@@ -1,6 +1,7 @@
 0.9615 2022-06-30
   [CHANGES]
   * Improve the pod that spvmdist generates.
+  * Removed "Bug Report" and "Support" section from the output of spvmdist command.
   [BUG FIX]
   * Fix the bug that SPVM::Builder::Config doesn't use SPVM::Builder::Resource.
   [NON BACKWORD COMPATIBLE CHANGES]
